minor fixes: readmore, font-weight, margin, gaps

--- a/dev/scss/abstract/_mixins.scss
+++ b/dev/scss/abstract/_mixins.scss
@@ -1,16 +1,1 @@
 @use "variables" as *;
-
-@mixin flex($d: row, $jc: center, $ai: center, $w: nowrap, $gap: 0){
-    display: flex;
-    flex-direction: $d;
-    justify-content: $jc;
-    align-items: $ai;
-    flex-wrap: $w;
-    gap: $gap;
-  }
-
-  @include flex($d: column, $gap: 1rem);
-
-  @mixin grid($col: 1fr 1fr, $row: auto, $gap: 1rem){
-    
-  }
