--- a/dev/scss/layout/_blog.scss
+++ b/dev/scss/layout/_blog.scss
@@ -140,27 +140,12 @@
     display: flex;
     flex-direction: row;
     justify-content: start;
+    
+   
+}
 
-    & h2 {
-        @include uppercase-text;
-        font-size: 2rem;
-        color: $dark-blue;
-    }
-
-    & span {
-        border-radius: 50%;
-        background-color: $dark-blue;
-        padding: .75rem ;
-        width: 2rem;
-        height: 2rem;
-        text-align: center;
-        display: inline-block;
-        padding: 8px;
-        margin-right: .25rem;
-        color: white;
-        font-size: 2rem;
-        
-      }
-
-  
+.older-posts {
+    padding: 3rem;
+    width: 15rem;
+    padding-left: 0.5rem
 }
